@startuml
set namespaceSeparator ::
hide empty members

package "plantio.app.core.config" {
  class "Settings" as plantio_app_core_config_Settings {
  app_name: str
  app_version: str
  env: str
  mongo_uri_local: str
  mongo_uri_atlas: str | None
  database_name: str
  host: str
  port: int
  upload_dir: str
  model_path: str
  class_map_path: str | None
  allowed_origins: list[str]
  min_confidence: float
  allow_healthy: bool
  min_margin: float
  model_config
  }
}

package "plantio.app.core.logging" {
  class "InterceptHandler" as plantio_app_core_logging_InterceptHandler {
  }
}

package "plantio.app.models.diagnosis" {
  class "Diagnosis" as plantio_app_models_diagnosis_Diagnosis {
  status: str
  created_at: datetime
  request: dict[str, Any]
  result: dict[str, Any] | None
  inference_ms: int | None
  }
}

package "plantio.app.models.disease" {
  class "Disease" as plantio_app_models_disease_Disease {
  id: str
  plant_id: str
  name: dict[str, str]
  symptoms: list[str]
  causes: str | None
  treatments: list[dict]
  gallery: list[str]
  popularity: int
  }
}

package "plantio.app.models.plant" {
  class "DiseaseInPlant" as plantio_app_models_plant_DiseaseInPlant {
  diseaseName: str
  description: str
  symptoms: list[str]
  prevention: list[str]
  treatment: list[str]
  riskLevel: str | None
  images: list[str]
  }
  class "Plant" as plantio_app_models_plant_Plant {
  id: PydanticObjectId | None
  plantName: str
  scientificName: str | None
  description: str | None
  imageUrl: str | None
  diseases: list[DiseaseInPlant]
  model_config
  }
}

package "plantio.app.services.inference" {
  class "_BaseClassifier" as plantio_app_services_inference__BaseClassifier {
  }
  class "_DummyClassifier" as plantio_app_services_inference__DummyClassifier {
  }
  class "_TorchClassifier" as plantio_app_services_inference__TorchClassifier {
  }
}

package "plantio.app.services.storage" {
  class "LocalFileStorage" as plantio_app_services_storage_LocalFileStorage {
  }
}

plantio_app_services_inference__DummyClassifier --|> plantio_app_services_inference__BaseClassifier
plantio_app_services_inference__TorchClassifier --|> plantio_app_services_inference__BaseClassifier

plantio_app_models_disease_Disease " * " --> "1" plantio_app_models_plant_Plant : plant_id → Plant.id
plantio_app_models_plant_Plant "1" --> "*" plantio_app_models_plant_DiseaseInPlant : diseases
@enduml